<resources>
    <string name="app_name">My First Application</string>
    <string name="to_do_text">Add new item</string>
    <string name="view_list_text">View todo list</string>
    <string name="item_title">Title</string>
    <string name="item_description">Description</string>
    <string name="item_due_date">Due date</string>
    <string name="save_text">Save</string>
    <string name="priority_label">Priority:</string>
</resources>
